<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplicationpractice.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="userName"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.example.myapplicationpractice.fragments.ContactsFragment"
        android:label="@string/nav_contacts"
        tools:layout="@layout/fragment_contacts">
        <action
            android:id="@+id/action_contacts_to_contactDetail"
            app:destination="@id/contactDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/contactDetailFragment"
        android:name="com.example.myapplicationpractice.fragments.ContactDetailFragment"
        android:label="@string/contact_name"
        tools:layout="@layout/fragment_contact_detail">
        <argument
            android:name="contact"
            app:argType="com.example.myapplicationpractice.models.Contact" />
    </fragment>

    <fragment
        android:id="@+id/vaultHomeFragment"
        android:name="com.example.myapplicationpractice.fragments.VaultFragment"
        android:label="@string/nav_vault"
        tools:layout="@layout/fragment_vault_home" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.myapplicationpractice.fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
